[gd_scene load_steps=4 format=3 uid="uid://cqlu0litbx2mt"]

[ext_resource type="Script" uid="uid://brv13q4w4qyed" path="res://scripts/scroll_container.gd" id="1_lohka"]
[ext_resource type="Script" uid="uid://dht4gp5guhuuq" path="res://scripts/tunelist.gd" id="1_vsy3t"]
[ext_resource type="Theme" uid="uid://b6i4uc5xtfrq2" path="res://theming/tunelist_theme.tres" id="3_2l4vj"]

[node name="TunesList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vsy3t")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="SectionWithMargin" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="ColorRect" parent="SectionWithMargin"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.34902, 0.34902, 0.34902, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="SectionWithMargin"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
script = ExtResource("1_lohka")

[node name="ListContainer" type="VBoxContainer" parent="SectionWithMargin/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="list_item" type="Control" parent="SectionWithMargin/ScrollContainer/ListContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="button" type="Button" parent="SectionWithMargin/ScrollContainer/ListContainer/list_item"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("3_2l4vj")

[node name="h_container" type="HBoxContainer" parent="SectionWithMargin/ScrollContainer/ListContainer/list_item"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="title_label" type="Label" parent="SectionWithMargin/ScrollContainer/ListContainer/list_item/h_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "The Thing"
vertical_alignment = 1
text_overrun_behavior = 4

[node name="percent_label" type="Label" parent="SectionWithMargin/ScrollContainer/ListContainer/list_item/h_container"]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0%"

[node name="HSeparator" type="HSeparator" parent="SectionWithMargin/ScrollContainer/ListContainer/list_item"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -4.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 0
